[gd_scene load_steps=6 format=2]

[ext_resource path="res://EnemyScenes/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Art/Explosions/ExplosionA.png" type="Texture" id=2]
[ext_resource path="res://Explosions/ExplosionA.gd" type="Script" id=3]
[ext_resource path="res://Sounds/Explosion.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "ExplodeA"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 13.75, 12.8 ), Vector2( 21, 19.55 ), Vector2( 24, 25.55 ), Vector2( 31, 29.3 ), Vector2( 9.74998, 15.55 ), Vector2( 2.74998, 3.3 ), Vector2( 2.74998, 0.550003 ) ]
}

[node name="Enemy" instance=ExtResource( 1 )]
position = Vector2( 11, -0.75 )
script = ExtResource( 3 )
animation_name = "ExplodeA"

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( -9.75, 1 )

[node name="AnimationPlayer" parent="." index="1"]
method_call_mode = 1
anims/ExplodeA = SubResource( 1 )

[node name="Sprite" parent="." index="2"]
position = Vector2( 0.25, -0.75 )
texture = ExtResource( 2 )
hframes = 9
frame = 7

[node name="LifeTimer" parent="." index="3"]
one_shot = false
autostart = false

[node name="AudioStreamPlayer2D" parent="." index="4"]
stream = ExtResource( 4 )

[node name="HitBoxTimer" type="Timer" parent="." index="5"]
wait_time = 0.5
[connection signal="timeout" from="HitBoxTimer" to="." method="_on_HitBoxTimer_timeout"]
